add auth on swagger-sails using passport for basicauth, session and login form
