# api/swagger/swagger.yaml
@@ -18,56 +18,71 @@ consumes:
 produces:
   - application/json
 securityDefinitions:
-  basicAuthAtDomainUk:
+  basicAuth:
     type: basic
-    description: basic auth checks on Uk passwords.
-  basicAuthAtDomainFr:
+    description: basic auth checks on User database.
+  # TODO change type to cookie or other
+  session:
     type: basic
-    description: basic auth checks on Fr passwords.
+    description: session auth.
 paths:
-  /hello:
-    # binds a127 app logic to a route
-    x-swagger-router-controller: hello_world
-    get:
-      security:
-        - basicAuthAtDomainUk: []
-        - basicAuthAtDomainFr: []
-      description: Returns 'Hello' to the caller
-      # used as the method name of the controller
-      operationId: hello
-      parameters:
-        - name: name
-          in: query
-          description: The name of the person to whom to say hello
-          required: false
-          type: string
-      responses:
-        "200":
-          description: Success
-          schema:
-            # a pointer to a definition
-            $ref: "#/definitions/HelloWorldResponse"
-        # responses may fall through to errors
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
   /person:
     # binds a127 app logic to a route
     x-swagger-router-controller: PersonController
     get:
       security:
-        - basicAuthAtDomainUk: []
-        - basicAuthAtDomainFr: []
-      description: Returns persons to the caller
+        - basicAuth: []
+        - session: []
+      description: Returns list of Vips
       # used as the method name of the controller
       operationId: list
+      produces:
+        - application/json
       responses:
         "200":
           description: Success
           schema:
             # a pointer to a definition
-            $ref: "#/definitions/HelloWorldResponse"
+            $ref: "#/definitions/SuccessResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /auth/session:
+    x-swagger-router-controller: AuthController
+    post:
+      description: establish a session
+      operationId: createSession
+      produces:
+        - application/json
+      parameters:
+        - name: credentials
+          in: body
+          description: user credentials
+          schema:
+            type: object
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/SuccessResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    delete:
+      description: terminate a session
+      # used as the method name of the controller
+      operationId: terminateSession
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/SuccessResponse"
         # responses may fall through to errors
         default:
           description: Error
@@ -77,11 +92,7 @@ paths:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
 definitions:
-  HelloWorldResponse:
-    required:
-      - message
-    properties:
-      message:
-        type: string
   ErrorResponse:
+    type: string
+  SuccessResponse:
     type: string
